<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".joblisting.ViewJobActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/jobsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:itemCount="10"
        tools:listitem="@layout/item_job"/>

</androidx.constraintlayout.widget.ConstraintLayout>