...
    <string name="emailLogin">Email</string>
    <string name="passwordLogin2">Password</string>
    <string name="signupLogin">Do not have an account?</string>

    <string name="logout_label">LOGOUT</string>
    <string name="employer_label">WELCOME EMPLOYER</string>
    <string name="employee_label">WELCOME EMPLOYEE</string>

    <string name="job_label">Job\'s Details:</string>
    <string name="titleHint">Title</string>
    <string name="job_description_Hint">Job Description</string>
    <string name="pick_date_Hint">Pick Date</string>
    <string name="dateBtnLabel">DATE</string>
...
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirm">Confirm</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="back">Back</string>

    <string name="ratingTitle">Please rate this person</string>
    <string name="ratingPoints">Rating Points</string>
    <string name="submit">submit</string>
    <string name="personname">PersonName</string>
    <string name="you_are_giving">You are giving</string>
    <string name="point_s">Point(s)</string>
    <string name="give_feedback">Give feedback</string>
...
