<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/preferencesFillingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/preferable_filling_label"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/preferencesFilling"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:autofillHints="Any"
        android:ems="10"
        android:hint="@string/prefer_job_label"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferencesFillingTitle" />

    <EditText
        android:id="@+id/salaryMinimal"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="119dp"
        android:autofillHints="0"
        android:ems="10"
        android:hint="@string/minimal_salary_label"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferencesFilling"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/startingHour"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="10:00"
        android:ems="10"
        android:hint="@string/starting_hour_label"
        android:inputType="time"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salaryMinimal"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/durationFill"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="2"
        android:ems="10"
        android:hint="@string/prefer_duration_hr_label"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startingHour"
        app:layout_constraintTop_toBottomOf="@+id/salaryMinimal"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/cancelPreferBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="51dp"
        android:text="@string/cancel_label"
        app:layout_constraintEnd_toStartOf="@+id/proceedPreferBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxDistanceFill" />

    <Button
        android:id="@+id/proceedPreferBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="60dp"
        android:text="@string/proceed_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelPreferBtn"
        app:layout_constraintTop_toBottomOf="@+id/maxDistanceFill" />

    <EditText
        android:id="@+id/maxDistanceFill"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="106dp"
        android:autofillHints="10"
        android:ems="10"
        android:hint="@string/maximum_distance_km_label"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startingHour"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="184dp"
        android:layout_height="55dp"
        android:layout_marginTop="144dp"
        android:text="@string/load_preference_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxDistanceFill" />


</androidx.constraintlayout.widget.ConstraintLayout>