...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/employeeLabel" />

    <Button
        android:id="@+id/viewJobsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_jobs_label"
...
    <Button
        android:id="@+id/viewJobsMapBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/view_jobs_map_label"
        app:layout_constraintBottom_toTopOf="@+id/searchJobButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewJobsBtn" />

    <Button
        android:id="@+id/logoutBtn"
...
